--- a/2.html
+++ b/2.html
@@ -5,8 +5,8 @@
 hello from test1
 <h1>welcome to www </h1>
 <h1>welcome to RAMAN POLYTECHNIC </h1>
-<h1>welcome to RAMAN POLYTECHNIC kavuu </h1>
-<h1>welcome to RAMAN POLYTECHNIC tejuu </h1>
+<h1>welcome to RAMAN POLYTECHNIC  </h1>
+<h1>welcome to RAMAN POLYTECHNIC  </h1>
 
 
 
